--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ img {
   display: inline-block;
   border: 0;
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
   vertical-align: middle;
 }
 ::selection {
@@ -479,18 +479,20 @@ span.colored {
     width: 50%;
 }
 #billboard .banner-header {
-    width: 51%;
+    width: 70%;
     margin-bottom: 200px;
 }
 .banner-content h1 {
-    font-size: 4.4em;
+    font-size: 2.4em;
     line-height: 1;
 }
 .banner-content p {
     font-size: 1.2em;
     line-height: 1.7;
-    color: #cfcfcf;
+    color: #fff;
     padding-bottom: 40px;
+    margin-bottom:0;
+    
 }
 
 @media screen and (max-width: 1680px){
@@ -551,16 +553,23 @@ span.colored {
 
 /*----- Social Links
 -------------------------------*/
-#billboard .socila-links ul {
+/*added by pb on 21.01.25*/
+#billboard .social-links ul{
+    border: 1px solid yellow;
+    width:242px;
+    padding:8px;
+}
+
+#billboard .social-links ul {
     display: flex;
 }
-#billboard .socila-links li {
+#billboard .social-links li {
     padding-right: 30px;
 }
-#billboard .socila-links a {
+#billboard .social-links a {
     color: #f9f6f6;
 }
-#billboard .socila-links a:hover {
+#billboard .social-links a:hover {
     color: #fba820;
 }
 
